dashboard/null/dashboard-de-t.yml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: dashboard
  labels:
    app: cheese
    cheese: dashboard
  name: kubernetes-dashboard
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cheese
      task: dashboard
  template:
    metadata:
      labels:
        app: cheese
        task: dashboard
        version: v0.0.1
      annotations:
        scheduler.alpha.kubernetes.io/tolerations: |
          [
            {
              "key": "dedicated",
              "operator": "Equal",
              "value": "master",
              "effect": "NoSchedule"
            }
          ]
    spec:
      containers:
      - name: dashboard
        image: gcr.io/google_containers/kubernetes-dashboard-amd64:v1.5.0
#        imagePullPolicy: Always
        ports:
        - containerPort: 9090
          name: http
          protocol: TCP
        args:
          # Uncomment the following line to manually specify Kubernetes API server Host
          # If not specified, Dashboard will attempt to auto discover the API server and connect
          # to it. Uncomment only if the default does not work.
          - --apiserver-host=http://10.173.32.67:8080
        livenessProbe:
          httpGet:
            path: /
            port: 9090
          initialDelaySeconds: 30
          timeoutSeconds: 30
