dashboard/null/dashboard-service-t.yml
kind: Service
apiVersion: v1
metadata:
  name: dashboard
  namespace: kube-system
spec:
  ports:
  - port: 80
    name: http
    targetPort: 9090
  selector:
    app: cheese 
    task: dashboard
